--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </p>
     
             <p>Sep 26, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
-                <b>Xing Gu</b> (Westlake University), 
+                <b><a href="https://its.westlake.edu.cn/info/1108/1426.htm" target="_blank">Xing Gu</a></b> (Westlake University), 
                 <a onclick="toggle_visibility('3');">
                     <i>The Ordinary and Motivic Cohomology of BPGL<sub>n</sub>(ℂ)</i></a><br />
                 <div id="3" class="toshow" style="display:none">
