--- a/grad/index.html
+++ b/grad/index.html
@@ -134,6 +134,11 @@
         <b>Jiacheng Liang</b>, 
         <i>Elliptic curves and abelian varieties</i>
     </p>
+    
+    <p>Sep 27, '22 (4–6, M5024), 
+        <b>Yifan Wu</b>, 
+        <i>Introduction to bordism and Thom spectra</i>
+    </p>
 
 
 
