--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -204,7 +204,10 @@
                     <i>Introduction to p-adic fields and the Hasse principle, cont'd</i></a><br />        
     </p>
 
-
+    <p>Sep 29, '22,
+        <b>Kaicheng Dong</b>,
+                    <i>Introduction to Dirichlet L-fuctions</i></a><br />
+    </p>
 
 <br /><br /><br />
 <p></p>
