--- a/index.html
+++ b/index.html
@@ -177,7 +177,21 @@
                         ordinary and the motivic cohomology of the complex projective linear group.</li>
                 </div>
             </p>
-
+            
+            <p>Sep 27, '22 (Tues, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b><a href="https://its.westlake.edu.cn/info/1108/1426.htm" target="_blank">Xing Gu</a></b> (Westlake University), 
+                <a onclick="toggle_visibility('4');">
+                    <i>The Ordinary and Motivic Cohomology of BPGL<sub>n</sub>(ℂ)</i></a><br />
+                <div id="4" class="toshow" style="display:none">
+                    <li>For an algebraic group G over the field ℂ of complex numbers, we have the classifying space BG in the sense of Totaro and Voevodsky, 
+                        which is an object in the unstable motivic homotopy category that plays a similar role in algebraic geometry as 
+                        the classifying space of a Lie group in topology. The motivic cohomology (in particular, the Chow ring) of BG is 
+                        closely related, via the cycle map, to the singular cohomology of the topological realization of BG, which is the 
+                        classifying space of G(ℂ), the underlying Lie group of the complex algebraic group G. In this talk we present 
+                        a work which exploits the above connection between topological and motivic theory and yields new results on both the 
+                        ordinary and the motivic cohomology of the complex projective linear group.</li>
+                </div>
+            </p>
 
 
 <br /><br /><br />
