--- a/grad/index.html
+++ b/grad/index.html
@@ -137,7 +137,7 @@
     
     <p>Sep 27, '22 (4–6, M5024), 
         <b>Yifan Wu</b>, 
-        <i>Introduction to bordism and Thom spectra</i>
+        <a href="22fal/Introduction to Bordism and Thom Spectra_compressed.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
     </p>
 
 
