--- a/grad/index.html
+++ b/grad/index.html
@@ -124,20 +124,21 @@
 
 <h3>About</h3>
 
-    <p>This is a graduate-level seminar on algebraic and geometric topology.  Topics are selected from common interests of the participants.</p>
+    <p>This is a graduate-level seminar on algebraic and geometric topology.  Topics are selected from common interests of the participants.  
+    <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general guidelines on how to give a good talk.</p>
 
     
 
-<h3>Talks in Fall 2022</h3>
+<h3>Talks in Fall 2022 (mostly Tuesdays 4:30–5:30 in M5024)</h3>
 
-    <p>Sep 20, '22 (4–6, M5024), 
+    <p>Sep 20, '22, 
         <b>Jiacheng Liang</b>, 
         <i>Elliptic curves and abelian varieties</i>
     </p>
     
-    <p>Sep 27, '22 (4–6, M5024), 
+    <p>Sep 27, '22, 
         <b>Yifan Wu</b>, 
-        <a href="22fal/Introduction to Bordism and Thom Spectra_compressed.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
+        <a href="22fal/0927-wuyf.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
     </p>
 
 
