--- a/grad/index.html
+++ b/grad/index.html
@@ -138,7 +138,7 @@
     
     <p>Sep 27, '22, 
         <b>Yifan Wu</b>, 
-        <a href="22fal/0927-wuyf.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
+        <a href="22fal/Pontrjagin-Thom.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
     </p>
 
 
