--- a/acts/index.html
+++ b/acts/index.html
@@ -149,7 +149,7 @@
             <p>Sep 19, '22, 
                <b>Siheng Yi, Qingrui Qu, and Pingyao Feng</b>, 
                 <a onclick="toggle_visibility('21');">
-                    <i>Progress report on topological analysis of video and speech data</i></a><br />
+                    <i>Further report on video and speech data</i></a><br />
                 <div id="21" class="toshow" style="display:none">
                     <li><a href="21-22/Slides_Feng_20220923.pdf" target="_blank">Slides</a> on machine learning of barcodes from speech data</li>
                 </div>
