--- a/acts/index.html
+++ b/acts/index.html
@@ -130,7 +130,7 @@
                 try to make it self-contained by starting mildly with overview and background materials.
                 Our focus is the theory and applications of topological methods in analyzing time-dependent data, 
                 with a specific goal of continuing with hands-on 
-                <a href="https://github.com/tda-for-vowels-and-consonants" target="_blank">experiments</a> with audio signal processing.</p>
+                <a href="https://github.com/tda-for-vowels-and-consonants" target="_blank">experiments</a> with speech signal processing.</p>
 
 
 
