--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                 </div>
             </p>
             
+            <p>Oct 10, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b><a href="http://homepage.amss.ac.cn/research/homePage/557e5446387442b580e7cead66328f23/myHomePage.html" target="_blank">Yang Su</a></b> (Chinese Academy of Sciences), 
+                <a onclick="toggle_visibility('4');">
+                    <i>The mapping class group of projective-plane-like manifolds</i></a><br />
+                <div id="4" class="toshow" style="display:none">
+                    <li>A closed simply-connected smooth manifold is projective plane like if its homology groups are the same as the homology groups of 
+                        a projective plane over the complex numbers, the quaternions or the octonions. A smooth classification of projective-plane-like 
+                        manifolds in dimension>4 was obtained by Kramer and Stolz in 2007. In a joint work with WANG Wei we computed the mapping class 
+                        group of these manifolds. In this talk I will give a brief report of this computation. </li>
+                </div>
+            </p>
+            
 
 <br /><br /><br />
 <p></p>
