--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </p>
             
             <p>Oct 10, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
-                <b><a href="http://homepage.amss.ac.cn/research/homePage/557e5446387442b580e7cead66328f23/myHomePage.html" target="_blank">Yang Su</a></b> (Chinese Academy of Sciences), 
+                <b><a href="http://homepage.amss.ac.cn/research/homePage/557e5446387442b580e7cead66328f23/myHomePage.html" target="_blank">Su Yang</a></b> (Chinese Academy of Sciences), 
                 <a onclick="toggle_visibility('4');">
                     <i>The mapping class group of projective-plane-like manifolds</i></a><br />
                 <div id="4" class="toshow" style="display:none">
