--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                 <a onclick="toggle_visibility('3');">
                     <i>The Ordinary and Motivic Cohomology of BPGL<sub>n</sub>(ℂ)</i></a><br />
                 <div id="3" class="toshow" style="display:none">
-                    <li>For an algebraic group G over the field ℂ of complex numbers, we have the classifying space BG in the sense of Totaro and Voevodsky, 
+                    For an algebraic group G over the field ℂ of complex numbers, we have the classifying space BG in the sense of Totaro and Voevodsky, 
                         which is an object in the unstable motivic homotopy category that plays a similar role in algebraic geometry as 
                         the classifying space of a Lie group in topology. The motivic cohomology (in particular, the Chow ring) of BG is 
                         closely related, via the cycle map, to the singular cohomology of the topological realization of BG, which is the 
                         classifying space of G(ℂ), the underlying Lie group of the complex algebraic group G. In this talk we present 
                         a work which exploits the above connection between topological and motivic theory and yields new results on both the 
-                        ordinary and the motivic cohomology of the complex projective linear group.</li>
+                        ordinary and the motivic cohomology of the complex projective linear group.
                 </div>
             </p>
             
@@ -183,10 +183,10 @@
                 <a onclick="toggle_visibility('4');">
                     <i>The mapping class group of projective-plane-like manifolds</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    <li>A closed simply-connected smooth manifold is projective plane like if its homology groups are the same as the homology groups of 
+                    A closed simply-connected smooth manifold is projective plane like if its homology groups are the same as the homology groups of 
                         a projective plane over the complex numbers, the quaternions or the octonions. A smooth classification of projective-plane-like 
                         manifolds in dimension>4 was obtained by Kramer and Stolz in 2007. In a joint work with WANG Wei we computed the mapping class 
-                        group of these manifolds. In this talk I will give a brief report of this computation. </li>
+                        group of these manifolds. In this talk I will give a brief report of this computation.
                 </div>
             </p>
             
