--- a/acts/index.html
+++ b/acts/index.html
@@ -156,7 +156,7 @@
             </p>
 
             <p>Sep 26, '22, 
-               <b>Zhiwang Yu</b>, 
+               <b>Zhiwang Yu and Cunshi Wang</b>, 
                 <a onclick="toggle_visibility('22');">
                     <i>Topological construction of neural network architectures and its applications</i></a><br />
                 <div id="22" class="toshow" style="display:none">
@@ -166,6 +166,7 @@
                         <a href="https://link.springer.com/article/10.1007/s11263-007-0056-x" target="_blank">On the local behavior of spaces of natural images</a></li>
                     <li>Gunnar Carlsson, Rickard Brüel Gabrielsson, 
                         <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
+                    <li><a href="21-22/Slides_Wang_20220926.pdf" target="_blank">Slides on CNN</a> on periodicity detection for video data</li>
                 </div>
             </p>
 
