--- a/acts/index.html
+++ b/acts/index.html
@@ -166,7 +166,7 @@
                         <a href="https://link.springer.com/article/10.1007/s11263-007-0056-x" target="_blank">On the local behavior of spaces of natural images</a></li>
                     <li>Gunnar Carlsson, Rickard Brüel Gabrielsson, 
                         <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
-                    <li><a href="21-22/Slides_Wang_20220926.pdf" target="_blank">Slides on CNN</a> on periodicity detection for video data</li>
+                    <li><a href="21-22/Slides_Wang_20220926.pdf" target="_blank">Slides</a> on CNN</li>
                 </div>
             </p>
 
