--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -209,6 +209,20 @@
                     <i>Introduction to Dirichlet L-fuctions</i></a><br />
     </p>
 
+    <p>Oct 6, '22,
+        <b>Yining Han</b>,
+                    <i>Introduction to Dirichlet L-fuctions, cont'd & Dirichlet theorem</i></a><br />
+    </p>
+
+
+
+
+
+
+
+
+
+
 <br /><br /><br />
 <p></p>
 </article>
