--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -216,7 +216,7 @@
 
     <p>Oct 13, '22,
         <b>Ziyin Hu</b>,
-        <i>Modular group and modular fuctions</i></a><br />
+        <i>Modular group and modular functions</i></a><br />
     </p>
 
 
