--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -206,12 +206,12 @@
 
     <p>Sep 29, '22,
         <b>Kaicheng Dong</b>,
-                    <i>Introduction to Dirichlet L-fuctions</i></a><br />
+                    <i>Introduction to Dirichlet L-functions</i></a><br />
     </p>
 
     <p>Oct 6, '22,
         <b>Yining Han</b>,
-                    <i>Introduction to Dirichlet L-fuctions, cont'd & Dirichlet theorem</i></a><br />
+                    <i>Introduction to Dirichlet L-functions, cont'd & Dirichlet theorem</i></a><br />
     </p>
 
     <p>Oct 13, '22,
