--- a/grad/index.html
+++ b/grad/index.html
@@ -140,6 +140,11 @@
         <b>Yifan Wu</b>, 
         <a href="22fal/Pontrjagin-Thom.pdf" target="_blank"><i>Introduction to bordism and Thom spectra</i></a>
     </p>
+    
+    <p>Oct 11, '22, 
+        <b>Tongtong Liang Wu</b>, 
+        <i>Power Operations in Complex Cobordism and Quillen's Theorem on the Formal Group Laws</i>
+    </p>
 
 
 
