--- a/grad/index.html
+++ b/grad/index.html
@@ -142,7 +142,7 @@
     </p>
     
     <p>Oct 11, '22, 
-        <b>Tongtong Liang Wu</b>, 
+        <b>Tongtong Liang</b>, 
         <i>Power Operations in Complex Cobordism and Quillen's Theorem on the Formal Group Laws</i>
     </p>
 
