--- a/acts/index.html
+++ b/acts/index.html
@@ -170,6 +170,16 @@
                 </div>
             </p>
 
+            <p>Oct 11, '22, 
+               <b>Siheng Yi, Qingrui Qu, and Pingyao Feng</b>, 
+                <a onclick="toggle_visibility('23');">
+                    <i>Further report on video and speech data</i></a><br />
+                <div id="21" class="toshow" style="display:none">
+                    <li><a href="21-22/Slides_Feng_20221010.pdf" target="_blank">More slides</a> on machine learning of barcodes from speech data, 
+                    and on how various factors affect the performance of topological time series analysis</li>
+                </div>
+            </p>
+
 
 
 <h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and M714)</h3>
