--- a/acts/index.html
+++ b/acts/index.html
@@ -175,8 +175,12 @@
                 <a onclick="toggle_visibility('23');">
                     <i>Reports on video and speech data</i></a><br />
                 <div id="23" class="toshow" style="display:none">
+                    <li><a href="21-22/Slides_Yi_20221010.pdf" target="_blank">More slides</a> on detection of mice scratching by TDA and sliding window 
+                        embedding for videos</li>
+                    <li><a href="21-22/Slides_Qu_20221010.pdf" target="_blank">More slides</a> on detection of mice scratching by statistics and sliding 
+                        window embedding for time series</li>
                     <li><a href="21-22/Slides_Feng_20221010.pdf" target="_blank">More slides</a> on machine learning of barcodes from speech data, 
-                    and on how various factors affect the performance of topological time series analysis</li>
+                        and on how various factors affect the performance of topological time series analysis</li>
                 </div>
             </p>
 
