--- a/acts/index.html
+++ b/acts/index.html
@@ -176,7 +176,7 @@
                     <i>Reports on video and speech data</i></a><br />
                 <div id="23" class="toshow" style="display:none">
                     <li><a href="21-22/Slides_Yi_20221010.pdf" target="_blank">Slides</a> on 
-                        detection of mouse scratching behavior by analyzing high-dimensional time series data via 
+                        detection of mouse scratching behavior by analyzing reduced high-dimensional time series data via 
                         sliding window embedding and persistent homology</li>
                     <li><a href="21-22/Slides_Qu_20221010.pdf" target="_blank">Slides</a> on 
                         detection of mouse scratching behavior by analyzing one-dimensional time series data via 
