--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -176,7 +176,7 @@
         you may not need topology or differential geometry as a prerequisite to understand the material to be covered per se.  
         On the other hand, you may lack a certain amount of intuition/motivation from such experiences as we move on.</p>
 
-    <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Yidan 307)</h3>
+    <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Science Building M5024)</h3>
     
     <p>Sep 8, '22, 
         <b>Kaicheng Dong</b>, 
@@ -212,6 +212,10 @@
     <p>Oct 6, '22,
         <b>Yining Han</b>,
                     <i>Introduction to Dirichlet L-functions, cont'd & Dirichlet theorem</i></a><br />
+         <div id="2" class="toshow" style="display:none">
+                    <li><a href="https://github.com/sustech-topology/sustech-topology.github.io/blob/master/undergrad/22fal/10.6%20notes%20Yining.pdf" target="_blank">Notes </a></li>
+                    <li> Kenneth Ireland & Michael Rosen, A classical introduction to modern number theory，chapter 15 & chapter 16</li>
+        </div>
     </p>
 
     <p>Oct 13, '22,
