--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -214,7 +214,7 @@
          <a onclick="toggle_visibility('3');">          
                     <i>Introduction to Dirichlet L-functions, cont'd & Dirichlet theorem</i></a><br />
          <div id="3" class="toshow" style="display:none">
-                    <li><a href="https://github.com/sustech-topology/sustech-topology.github.io/blob/master/undergrad/22fal/10.6%20notes%20Yining.pdf" target="_blank">Notes </a></li>
+                    <li><a href="22fal/10.6%20notes%20Yining.pdf" target="_blank">Notes </a></li>
                     <li> Kenneth Ireland & Michael Rosen, A classical introduction to modern number theory，chapter 15 & chapter 16</li>
         </div>
     </p>
