--- a/grad/index.html
+++ b/grad/index.html
@@ -133,7 +133,7 @@
 
     <p>Sep 20, '22, 
         <b>Jiacheng Liang</b>, 
-        <i>Elliptic curves and abelian varieties</i>
+        <a href="22fal/EC_JCL.pdf" target="_blank"><i>Elliptic Curves and Abelian Varieties</i></a>
     </p>
     
     <p>Sep 27, '22, 
@@ -142,8 +142,8 @@
     </p>
     
     <p>Oct 11, '22, 
-        <b>Tongtong Liang</b>, 
-        <i>Power Operations in Complex Cobordism and Quillen's Theorem on the Formal Group Laws</i>
+        <b>Tongtong Liang</b>,
+        <a href="22fal/QuillenSlides.pdf" target="_blank"><i>Power Operations in Complex Cobordism and Quillen's Theorem on Formal Group Laws</i></a>        
     </p>
 
 
