--- a/grad/index.html
+++ b/grad/index.html
@@ -143,7 +143,8 @@
     
     <p>Oct 11, '22, 
         <b>Tongtong Liang</b>,
-        <a href="22fal/QuillenSlides.pdf" target="_blank"><i>Power Operations in Complex Cobordism and Quillen's Theorem on Formal Group Laws</i></a>        
+        <a href="22fal/QuillenSlides.pdf" target="_blank"><i>Power Operations in Complex Cobordism and Quillen's Theorem on Formal Group Laws</i></a>. Speaker's write up:    <a href="https://tongtongliang.github.io/data/QuillenSurvey.pdf" target="_blank"><i>Power operations and Formal Group Laws in Complex Cobordism Theory</i></a>. Original papers:<a href="https://www.ams.org/journals/bull/1969-75-06/S0002-9904-1969-12401-8/S0002-9904-1969-12401-8.pdf" target="_blank"><i>On the formal group laws of unoriented and complex cobordism theory</i></a>, <a href="https://www.sciencedirect.com/science/article/pii/0001870871900417?via%3Dihub" target="_blank"><i>Elementary proofs of some results of cobordism theory using Steenrod operations</i></a>.
+    
     </p>
 
 
