--- a/grad/index.html
+++ b/grad/index.html
@@ -147,11 +147,11 @@
     <a onclick="toggle_visibility('9');">
         <i>Power Operations in Complex Cobordism and Quillen's Theorem on Formal Group Laws</i></a><br />
         <div id="9" class="toshow" style="display:none">
-            <li>In this talk, we will discuss how Quillen proved his theorem on formal group laws using power operations in complex cobordism. Additionally, we present a homotopical construction of cobordism power operations, which Quillen did not mention in his paper, and thus offer more insight about the connection between power operations and formal group laws. Finally, we give some motivic remarks to show how Quillen's work enlightens motivic homotopists.</li>
-            <li><a href="22fal/QuillenSlides.pdf" target="_blank"><i>Slides</i></a></li>
-            <li>Speaker's survey paper: <a href="https://tongtongliang.github.io/data/QuillenSurvey.pdf" target="_blank"><i>Power operations and Formal Group Laws in Complex Cobordism Theory</i></a> </li>
-            <li>Daniel Quillen, <a href="https://www.ams.org/journals/bull/1969-75-06/S0002-9904-1969-12401-8/S0002-9904-1969-12401-8.pdf" target="_blank"><i>On the formal group laws of unoriented and complex cobordism theory</i></a></li>
-            <li>Daniel Quillen, <a href="https://www.sciencedirect.com/science/article/pii/0001870871900417?via%3Dihub" target="_blank"><i>Elementary proofs of some results of cobordism theory using Steenrod operations</i></a> </li>
+            <li>In this talk, we will discuss how Quillen proved his theorem on formal group laws using power operations in complex cobordism. Additionally, we present a homotopical construction of cobordism power operations, which Quillen did not mention in his paper, in an attempt to highlight the connection between power operations and formal group laws. Along  the way, we give some motivic remarks to show how Quillen's work enlightens more recent development of in motivic homotopy theory.</li>
+            <li><a href="22fal/QuillenSlides.pdf" target="_blank">Slides</a></li>
+            <li>Speaker's survey paper: <a href="https://tongtongliang.github.io/data/QuillenSurvey.pdf" target="_blank"><i>Power Operations and Formal Group Laws in Complex Cobordism Theory</i></a> </li>
+            <li>Daniel Quillen, <a href="https://www.ams.org/journals/bull/1969-75-06/S0002-9904-1969-12401-8/" target="_blank"><i>On the Formal Group Laws of Unoriented and Complex Cobordism Theory</i></a></li>
+            <li>Daniel Quillen, <a href="https://www.sciencedirect.com/science/article/pii/0001870871900417?via%3Dihub" target="_blank"><i>Elementary Proofs of Some Results of Cobordism Theory Using Steenrod Operations</i></a> </li>
         </div>
     </p>
 
@@ -211,6 +211,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('2');">
                     <i>Introduction to spectral sequences</i></a><br />
                 <div id="2" class="toshow" style="display:none">
+            <li>Speaker's short note, <a href="21spr/SSNotes.pdf" target="_blank">Motivations to Develop Spectral Sequences</a>
             <li>Timothy Y. Chow, <a href="https://www.ams.org/notices/200601/fea-chow.pdf" target="_blank">You could have invented spectral sequences</a></li>
                                     </div>
             </p>
