--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -176,7 +176,7 @@
         you may not need topology or differential geometry as a prerequisite to understand the material to be covered per se.  
         On the other hand, you may lack a certain amount of intuition/motivation from such experiences as we move on.</p>
 
-    <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Science Building M5024)</h3>
+    <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in College of Science Building M5024)</h3>
     
     <p>Sep 8, '22, 
         <b>Kaicheng Dong</b>, 
