--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
 <h3>Talks in Fall 2022 </h3>
 
     
+            <p>Oct 24, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b>Zhongjian Zhu</a></b> (Wenzhou University), 
+                <a onclick="toggle_visibility('5');">
+                    <i>Homotopy decomposition of A<sub>n</sub><sup>2</sup>-complexes</i></a><br />
+                <div id="5" class="toshow" style="display:none">
+                    An (n-1)-connected finite CW-complex of dimension <=n+k is called an A_n^2-complex. The homotopy types of indecomposable (up to wedge product)
+                    A_n^2-complexes, classified by Prof. Zhang Sucheng in 1950, consist of spheres, Elementary Moore spaces and Elementary Chang complexes. 
+                    These are elementary homotopy types in homotopy theory. In this talk, I introduce some homotopy of A_n^2-complexes, especially the homotopy 
+                    decomposition problems of them. These are joint works with Prof. Pan Jianzhong.
+                </div>
+            </p>
+    
             <p>Oct 10, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b><a href="http://homepage.amss.ac.cn/research/homePage/557e5446387442b580e7cead66328f23/myHomePage.html" target="_blank">Su Yang</a></b> (Chinese Academy of Sciences), 
                 <a onclick="toggle_visibility('4');">
