--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                 <a onclick="toggle_visibility('5');">
                     <i>Homotopy decomposition of A<sub>n</sub><sup>2</sup>-complexes</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    An (n-1)-connected finite CW-complex of dimension <=n+k is called an A_n^2-complex. The homotopy types of indecomposable (up to wedge product)
-                    A_n^2-complexes, classified by Prof. Zhang Sucheng in 1950, consist of spheres, Elementary Moore spaces and Elementary Chang complexes. 
-                    These are elementary homotopy types in homotopy theory. In this talk, I introduce some homotopy of A_n^2-complexes, especially the homotopy 
+                    An (n-1)-connected finite CW-complex of dimension ≤n+k is called an A<sub>n</sub><sup>k</sup>-complex. The homotopy types of indecomposable (up to wedge product)
+                    A<sub>n</sub><sup>2</sup>-complexes, classified by Prof. Zhang Sucheng in 1950, consist of spheres, Elementary Moore spaces and Elementary Chang complexes. 
+                    These are elementary homotopy types in homotopy theory. In this talk, I introduce some homotopy of A<sub>n</sub><sup>2</sup>-complexes, especially the homotopy 
                     decomposition problems of them. These are joint works with Prof. Pan Jianzhong.
                 </div>
             </p>
