--- a/grad/index.html
+++ b/grad/index.html
@@ -154,8 +154,11 @@
             <li>Daniel Quillen, <a href="https://www.sciencedirect.com/science/article/pii/0001870871900417?via%3Dihub" target="_blank"><i>Elementary Proofs of Some Results of Cobordism Theory Using Steenrod Operations</i></a> </li>
         </div>
     </p>
-
-
+    
+    <p>Oct 18, '22, 
+        <b>Zhonglin Wu</b>, 
+        <a><i>Introduction to Adams spectral sequence</i></a>
+    </p>
 
 <h3><a id="22sum"></a>Talks in Summer 2022</h3>
     
