--- a/acts/index.html
+++ b/acts/index.html
@@ -65,6 +65,7 @@
                         
     <li><a href="#A" title="">About</a></li>
                         <li><a href="#T" title="">Talks</a></li>
+                        <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="20-21" title="" target="_blank">2020&ndash;21</a></li>
                         <!--<li><a href="#R" title="">References</a></li>-->
     
