--- a/grad/index.html
+++ b/grad/index.html
@@ -62,6 +62,7 @@
 
                     <ul class="header__nav">
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
+                        <li><a href="/act" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
                         <li><a href="#22sum">Summer 2022</a></li>
                         <li><a href="#21spr">Spring 2021</a></li>
