--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -226,9 +226,15 @@
     </p>
 
 
+    <p>Oct 20, '22,
+        <b>Qiyuan Song</b>,
+        <i>The space of modular forms and expansions at infinity</i></a><br />
+    </p>
 
-
-
+    <p>Oct 27, '22,
+        <b>Antong Zhu</b>,
+        <i>Heck operators and Theta functions</i></a><br />
+    </p>
 
 
 
