--- a/acts/index.html
+++ b/acts/index.html
@@ -186,6 +186,20 @@
                         and on how various factors affect the performance of topological time series analysis</li>
                 </div>
             </p>
+            
+            <p>Oct 19, '22, 
+               <b>Siheng Yi, Qingrui Qu</b>, 
+                <a onclick="toggle_visibility('23');">
+                    <i>Reports on video data, cont'd</i></a><br />
+                <div id="24" class="toshow" style="display:none">
+                    <li><a href="21-22/Slides_Qu_20221019.pdf" target="_blank">Slides</a> on 
+                        detection of mouse scratching behavior by analyzing one-dimensional time series data via 
+                        sliding window embedding and geometric statistics</li>
+                    <li><a href="21-22/Slides_Yi_20221019.pdf" target="_blank">Slides</a> on 
+                        detection of mouse scratching behavior by analyzing reduced high-dimensional time series data via 
+                        sliding window embedding and persistent homology</li>
+                </div>
+            </p>
 
 
 
