--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -231,7 +231,12 @@
         <i>The space of modular forms and expansions at infinity</i></a><br />
     </p>
 
-    <p>Oct 27, '22,
+   <p>Oct 27, '22,
+        <b>Qiyuan Song</b>,
+        <i>The space of modular forms and expansions at infinity, cont'd</i></a><br />
+    </p> 
+
+    <p>Nov 3, '22,
         <b>Antong Zhu</b>,
         <i>Heck operators and Theta functions</i></a><br />
     </p>
