--- a/acts/index.html
+++ b/acts/index.html
@@ -188,14 +188,14 @@
             </p>
             
             <p>Oct 19, '22, 
-               <b>Siheng Yi, Qingrui Qu</b>, 
+               <b>Qingrui Qu and Siheng Yi</b>, 
                 <a onclick="toggle_visibility('24');">
-                    <i>Reports on video data, cont'd</i></a><br />
+                    <i>Reports on biomedical signal processing</i></a><br />
                 <div id="24" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Qu_20221019.pdf" target="_blank">Slides</a> on 
+                    <li><a href="21-22/Slides_Qu_20221019.pdf" target="_blank">More slides</a> on 
                         detection of mouse scratching behavior by analyzing one-dimensional time series data via 
                         sliding window embedding and geometric statistics</li>
-                    <li><a href="21-22/Slides_Yi_20221019.pdf" target="_blank">Slides</a> on 
+                    <li><a href="21-22/Slides_Yi_20221019.pdf" target="_blank">More slides</a> on 
                         detection of mouse scratching behavior by analyzing reduced high-dimensional time series data via 
                         sliding window embedding and persistent homology</li>
                 </div>
