--- a/acts/index.html
+++ b/acts/index.html
@@ -187,10 +187,10 @@
                 </div>
             </p>
             
-            <p>Oct 19, '22, 
-               <b>Qingrui Qu and Siheng Yi</b>, 
+            <p>Oct 17 & 19, '22, 
+               <b>Pingyao Feng, Qingrui Qu, and Siheng Yi</b>, 
                 <a onclick="toggle_visibility('24');">
-                    <i>Reports on biomedical signal processing</i></a><br />
+                    <i>Phone alignment to learn more; reports on biomedical signal processing</i></a><br />
                 <div id="24" class="toshow" style="display:none">
                     <li><a href="21-22/Slides_Qu_20221019.pdf" target="_blank">More slides</a> on 
                         detection of mouse scratching behavior by analyzing one-dimensional time series data via 
