--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -238,7 +238,7 @@
 
     <p>Nov 3, '22,
         <b>Antong Zhu</b>,
-        <i>Heck operators and Theta functions</i></a><br />
+        <i>Hecke operators and Theta functions</i></a><br />
     </p>
 
 
