--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -222,23 +222,23 @@
 
     <p>Oct 13, '22,
         <b>Ziyin Hu</b>,
-        <i>Modular group and modular functions</i></a><br />
+        <i>The modular group; modular functions</i></a><br />
     </p>
 
 
     <p>Oct 20, '22,
         <b>Qiyuan Song</b>,
-        <i>The space of modular forms and expansions at infinity</i></a><br />
+        <i>The space of modular forms; expansions at infinity</i></a><br />
     </p>
 
    <p>Oct 27, '22,
         <b>Qiyuan Song</b>,
-        <i>The space of modular forms and expansions at infinity, cont'd</i></a><br />
+        <i>The space of modular forms; expansions at infinity (cont'd)</i></a><br />
     </p> 
 
     <p>Nov 3, '22,
         <b>Antong Zhu</b>,
-        <i>Hecke operators and Theta functions</i></a><br />
+        <i>Hecke operators; theta functions</i></a><br />
     </p>
 
 
