--- a/acts/index.html
+++ b/acts/index.html
@@ -201,6 +201,15 @@
                 </div>
             </p>
 
+            <p>Oct 24, '22, 
+               <b>Pingyao Feng</b>, 
+                <a onclick="toggle_visibility('25');">
+                    <i>More experiments with phone alignment; refining persistence profiles</i></a><br />
+                <div id="25" class="toshow" style="display:none">
+                    <li><a href="21-22/Slides_Feng_20221024.pdf" target="_blank">Slides</a></li>
+                </div>
+            </p>
+
 
 
 <h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and M714)</h3>
