--- a/acts/index.html
+++ b/acts/index.html
@@ -203,11 +203,8 @@
 
             <p>Oct 24, '22, 
                <b>Pingyao Feng</b>, 
-                <a onclick="toggle_visibility('25');">
-                    <i>More experiments with phone alignment; refining persistence profiles</i></a><br />
-                <div id="25" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Feng_20221024.pdf" target="_blank">Slides</a></li>
-                </div>
+               <i><a href="21-22/Slides_Feng_20221024.pdf" target="_blank">
+                   More experiments with phone alignment; refining persistence profiles</i></a> 
             </p>
 
 
