--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
 <h3>Talks in Fall 2022 </h3>
 
     
+            <p>Oct 31, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b>Ruizhi Huang</a></b> (Chinese Academy of Sciences), 
+                <a onclick="toggle_visibility('6');">
+                    <i>Homotopy of Manifolds</i></a><br />
+                <div id="6" class="toshow" style="display:none">
+                    Homotopy properties are basic global properties of geometric objects.  From 2014, techniques in unstable homotopy theory are used to 
+                    study homotopy of manifolds effectively.  In this talk, I will review the progress in this topic, especially on a series of recent 
+                    work of myself joint with Stephen Theriault.
+                </div>
+            </p>
+    
             <p>Oct 24, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b>Zhongjian Zhu</a></b> (Wenzhou University), 
                 <a onclick="toggle_visibility('5');">
