--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     
             <p>Oct 31, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
-                <b>Ruizhi Huang</a></b> (Chinese Academy of Sciences), 
+                <b><a href="https://sites.google.com/site/hrzsea/" target="_blank">Ruizhi Huang</a></b> (Chinese Academy of Sciences), 
                 <a onclick="toggle_visibility('6');">
                     <i>Homotopy of Manifolds</i></a><br />
                 <div id="6" class="toshow" style="display:none">
@@ -138,7 +138,7 @@
             </p>
     
             <p>Oct 24, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
-                <b>Zhongjian Zhu</a></b> (Wenzhou University), 
+                <b>Zhongjian Zhu</b> (Wenzhou University), 
                 <a onclick="toggle_visibility('5');">
                     <i>Homotopy decomposition of A<sub>n</sub><sup>2</sup>-complexes</i></a><br />
                 <div id="5" class="toshow" style="display:none">
