--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -222,13 +222,19 @@
 
     <p>Oct 13, '22,
         <b>Ziyin Hu</b>,
-        <i>The modular group; modular functions</i></a><br />
+        <a onclick="toggle_visibility('4');">
+                    <i>The modular group; modular functions</i></a><br />
+        <div id="4" class="toshow" style="display:none">
+                    <a href="22fal/lecture_about_modular_forms%20Ziyin%20Hu.pdf" target="_blank">Notes </a></li>
     </p>
 
 
     <p>Oct 20, '22,
         <b>Qiyuan Song</b>,
-        <i>The space of modular forms; expansions at infinity</i></a><br />
+        <a onclick="toggle_visibility('5');">
+                    <i>The space of modular forms; expansions at infinity</i></a><br />
+        <div id="5" class="toshow" style="display:none">
+                    <a href="22fal/note1%20Qiyuan%20Song.pdf" target="_blank">Notes </a></li>
     </p>
 
    <p>Oct 27, '22,
