--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -220,31 +220,24 @@
         </div>
     </p>
 
-    <p>Oct 13, '22,
-        <b>Ziyin Hu</b>,
-        <a onclick="toggle_visibility('4');">
-                    <i>The modular group; modular functions</i></a><br />
-        <div id="4" class="toshow" style="display:none">
-                    <a href="22fal/lecture_about_modular_forms%20Ziyin%20Hu.pdf" target="_blank">Notes </a></li>
+    <p>Oct 13, '22, 
+       <b>Ziyin Hu</b>, 
+       <a href="22fal/lecture_about_modular_forms%20Ziyin%20Hu.pdf" target="_blank"><i>The modular group; modular functions</i></a>
     </p>
-
 
     <p>Oct 20, '22,
-        <b>Qiyuan Song</b>,
-        <a onclick="toggle_visibility('5');">
-                    <i>The space of modular forms; expansions at infinity</i></a><br />
-        <div id="5" class="toshow" style="display:none">
-                    <a href="22fal/note1%20Qiyuan%20Song.pdf" target="_blank">Notes </a></li>
+       <b>Qiyuan Song</b>,
+       <a href="22fal/note1%20Qiyuan%20Song.pdf" target="_blank"><i>The space of modular forms; expansions at infinity</i></a>
     </p>
 
-   <p>Oct 27, '22,
+    <p>Oct 27, '22,
         <b>Qiyuan Song</b>,
-        <i>The space of modular forms; expansions at infinity (cont'd)</i></a><br />
+        <i>The space of modular forms; expansions at infinity (cont'd)</i>
     </p> 
 
     <p>Nov 3, '22,
         <b>Antong Zhu</b>,
-        <i>Hecke operators; theta functions</i></a><br />
+        <i>Hecke operators; theta functions</i>
     </p>
 
 
