--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -240,7 +240,20 @@
         <i>Hecke operators; theta functions</i>
     </p>
 
+     <p>Nov 17, '22,
+        <b>Antong Zhu</b>,
+        <i>Hecke operators; theta functions (cont'd)</i>
+    </p>
 
+     <p>Nov 24, '22,
+        <b>Hongxiang Zhao</b>,
+        <a onclick="toggle_visibility('4');">          
+                    <i>Introduction to elliptic curves, j-fuction,complex multiplication and class field theory </i>
+        <div id="4" class="toshow" style="display:none">
+                    <li> David A. Cox, Primes of the form x^2 + ny^2:</li>
+                    <li> Joseph H. Silverman, The arithmetic of elliptic curves, chapter 3</li>
+        </div>
+    </p>
 
 <br /><br /><br />
 <p></p>
