--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -250,7 +250,7 @@
         <a onclick="toggle_visibility('4');">          
                     <i>Introduction to elliptic curves, j-fuction,complex multiplication and class field theory </i>
         <div id="4" class="toshow" style="display:none">
-                    <li> David A. Cox, Primes of the form x^2 + ny^2:</li>
+                    <li> David A. Cox, Primes of the form x^2 + ny^2</li>
                     <li> Joseph H. Silverman, The arithmetic of elliptic curves, chapter 3</li>
         </div>
     </p>
