--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -248,10 +248,10 @@
      <p>Nov 24, '22,
         <b>Hongxiang Zhao</b>,
         <a onclick="toggle_visibility('4');">          
-                    <i>Introduction to elliptic curves, j-fuction,complex multiplication and class field theory </i>
+                    <i>Introduction to elliptic curves, j-function, complex multiplication, and class field theory</i></a><br />
         <div id="4" class="toshow" style="display:none">
-                    <li> David A. Cox, Primes of the form x^2 + ny^2</li>
-                    <li> Joseph H. Silverman, The arithmetic of elliptic curves, chapter 3</li>
+            <li> David A. Cox, Primes of the form <i>x</i><sup>2</sup> + <i>ny</i><sup>2</sup></li>
+                    <li> Joseph H. Silverman, The arithmetic of elliptic curves, Chapter III</li>
         </div>
     </p>
 
