--- a/grad/index.html
+++ b/grad/index.html
@@ -157,7 +157,7 @@
     
     <p>Oct 18, '22, 
         <b>Zhonglin Wu</b>, 
-        <i>Introduction to Adams spectral sequence</i>
+        <a href="22fal/Setting up of Adams SS.pdf" target="_blank"><i>Introduction to Adams spectral sequence</i></a>
     </p>
 
 <h3><a id="22sum"></a>Talks in Summer 2022</h3>
