--- a/grad/index.html
+++ b/grad/index.html
@@ -159,6 +159,11 @@
         <b>Zhonglin Wu</b>, 
         <a href="22fal/Setting up of Adams SS.pdf" target="_blank"><i>Introduction to Adams spectral sequence</i></a>
     </p>
+        
+        <p>Nov 15 & Nov 22, '22, 
+        <b>Xuecai Ma</b>, 
+        <a href="22fal/cht.pdf" target="_blank"><i>An overview on chromatic homotopy theory</i></a>
+    </p>
 
 <h3><a id="22sum"></a>Talks in Summer 2022</h3>
     
