--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
     
 <h3>Talks in Fall 2022 </h3>
 
+            <p>Dec 12, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b><a href="http://jckx.bisu.edu.cn/art/2019/9/29/art_16003_231195.html" target="_blank">Xueqi Wang</a></b> (Beijing International Studies University), 
+                <a onclick="toggle_visibility('7');">
+                    <i>On the classification of certain 1-connected 7-manifolds</i></a><br />
+                <div id="7" class="toshow" style="display:none">
+                    The classification of manifolds is a basic and important problem intopology. In this talk, 
+                    I will focus on 1-connected 7-manifolds with specialhomology groups or cohomology rings 
+                    and report some previous work along with my progress on their classification. 
+                    I will also present some interesting applications of these classification results in geometry.
+                </div>
+            </p>
     
             <p>Oct 31, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b><a href="https://sites.google.com/site/hrzsea/" target="_blank">Ruizhi Huang</a></b> (Chinese Academy of Sciences), 
